# monster-cli

./: README.md  pyproject.toml  requirements.txt
monsterclient/: api.py  monster.py
