[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monsterclient"
version = "1.2.1"
dynamic = ["dependencies"]
authors = [
    { name = "Morteza", email = "mortezash404@gmail.com" },
    { name = "Mahrad", email = "mahrad.hanaforoosh@gmail.com" },
]
description = "client for monster"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
monster = "monsterclient.monster:main"
